# AI-NEWS

./: .env.example  .gitignore  brief.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: cron.py  index.py  ping.py  smoke.py  webhook.py
bot/: config.py
bot/handlers/: callback.py  export.py  lang.py  lib.py  link.py  manage.py  remind.py  search.py  start.py  stats.py  topics.py
bot/services/: category.py  editing.py  export.py  gemini.py  i18n.py  keywords.py  library_groups.py  parser.py  reminder.py  scraper.py  settings.py  sheets.py  stats.py
bot/utils/: formatting.py  source_detect.py  validation.py
docs/: deploy-runbook.md  huong-dan-hoat-dong-va-su-dung.md
docs/superpowers/specs/: 2026-04-12-ui-library-filter-sheets-design.md
scripts/: deploy_checks.py
tests/: conftest.py  test_category_detection.py  test_gemini_summary_format.py  test_lib_handler.py  test_library_backfill_startup.py  test_library_flow.py  test_library_groups_parser.py  test_library_sheets_sync.py  test_phase3_cron.py  test_phase3_deploy.py  test_scraper_tiktok.py
