[project]
name = "infosaver-bot"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "python-telegram-bot==22.5",
    "fastapi>=0.115.0",
    "gspread>=6.2.1",
    "google-generativeai>=0.8.5",
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.4",
    "python-dotenv>=1.1.0",
    "openpyxl>=3.1.5",
    "httpx>=0.27.0",
]
